2013-05-14  Ramon Novoa  <rnovoa@artica.es>

	* include/config_process.php,
	  include/languages/el.mo,
	  include/languages/gl.mo,
	  include/languages/et.mo,
	  include/languages/cs.po,
	  include/languages/es.po,
	  include/languages/en_GB.mo,
	  include/languages/it.mo,
	  include/languages/sl.mo,
	  include/languages/sk.po,
	  include/languages/uk.po,
	  include/languages/ms.po,
	  include/languages/ro.po,
	  include/languages/nb.po,
	  include/languages/en.po,
	  include/languages/pt_BR.po,
	  include/languages/ko.mo,
	  include/languages/fr.po,
	  include/languages/ca.po,
	  include/languages/en_AU.mo,
	  include/languages/tr.po,
	  include/languages/de.po,
	  include/languages/sv.po,
	  include/languages/he.po,
	  include/languages/bn.mo,
	  include/languages/ar.mo,
	  include/languages/te.po,
	  include/languages/mr.mo,
	  include/languages/hu.po,
	  include/languages/da.mo,
	  include/languages/fa.mo,
	  include/languages/ru.po,
	  include/languages/ast.po,
	  include/languages/ja.mo,
	  include/languages/fi.mo,
	  include/languages/hi.mo,
	  include/languages/el.po,
	  include/languages/gl.po,
	  include/languages/eu.mo,
	  include/languages/et.po,
	  include/languages/en_GB.po,
	  include/languages/vi.mo,
	  include/languages/it.po,
	  include/languages/sl.po,
	  include/languages/zh_TW.mo,
	  include/languages/zh_CN.mo,
	  include/languages/nl.mo,
	  include/languages/pl.mo,
	  include/languages/ko.po,
	  include/languages/pt.mo,
	  include/languages/bg.mo,
	  include/languages/en_AU.po,
	  include/languages/bn.po,
	  include/languages/ar.po,
	  include/languages/cs.mo,
	  include/languages/es.mo,
	  include/languages/sk.mo,
	  include/languages/uk.mo,
	  include/languages/ms.mo,
	  include/languages/ro.mo,
	  include/languages/mr.po,
	  include/languages/da.po,
	  include/languages/fa.po,
	  include/languages/ja.po,
	  include/languages/nb.mo,
	  include/languages/fi.po,
	  include/languages/en.mo,
	  include/languages/hi.po,